to be continued, fastAPI and uvicorn is not responding wsl2

--- a/development.yml
+++ b/development.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   mongo:
     image: mongo:latest
-    contater_name: mongo
+    # contater_name: mongo
     env_file:
       - ./.env
     environment:
