--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   mongo:
     image: mongo:latest
@@ -11,6 +11,7 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE} 
     volumes:
       - mongo:/data/db
+      - ./database/mongo/data:/data/db
     ports:
       - '6000:27017'
 
